_sass/components/_c-section-title.scss
.c-section-title {
  position: relative;
  // padding-bottom: rem(50px);
  font-size: rem(50px);
  font-weight: 400;
  color: $font-color-1;
  
  span {
    display: block;
    margin-bottom: rem(20px);
    font-size: rem(15px);
    font-weight: 400;
  }

  &:after {
    content: "";
    position: absolute;
    top: rem(110px);
    left: 0;
    width: rem(60px);
    height: rem(3px);
    background-color: $color-4;
  }

  &.-small {
    margin-bottom: rem(50px);
    font-size: rem(12px);
    font-family: $font-secondary;
    text-transform: uppercase;
  }

  &.-light {
    color: $font-color-2;
    margin-bottom: rem(60px);

    &:after {
      background-color: $white;
    }
  }

  &.-country-name {
    padding-bottom: 0;
    &:after {
      top: rem(110px);
      bottom: auto;
    }
  }

  + p {
    margin-top: rem(50px);
  }
}

